--- a/components/Narrator/Narrator.module.scss
+++ b/components/Narrator/Narrator.module.scss
@@ -4,13 +4,19 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: rgba(0, 0, 0, 0.5);
+	background: rgba(0, 0, 0, 0.7);
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	z-index: 99;
+	z-index: 4;
+	transition: opacity 0.5s ease-in-out;
+	opacity: 1;
+
+	&.faded {
+		opacity: 0;
+	}
 
 	.narration {
 		font-family: 'Lora', serif;
