--- a/components/Actions/Actions.module.scss
+++ b/components/Actions/Actions.module.scss
@@ -7,4 +7,10 @@
 	width: 200px;
 	background: #272727;
 	padding: 0 10px;
+
+	.liveContainer {
+		position: absolute;
+		bottom: 10px;
+		padding: 0 10px;
+	}
 }
