--- a/components/Character/Character.module.scss
+++ b/components/Character/Character.module.scss
@@ -28,11 +28,13 @@
 
 		h2 {
 			font-family: 'Comme', sans-serif;
+			margin: 20px 0 40px;
 		}
 
 		p {
-			font-size: 12px;
+			font-size: 14px;
 			margin: 0;
+			text-transform: capitalize;
 
 			span {
 				float: right;
@@ -53,8 +55,8 @@
 			}
 
 			h3 {
-				font-size: 14px;
-				margin: 20px 0 0;
+				font-size: 16px;
+				margin: 25px 0 0;
 			}
 
 			.list {
