--- a/components/Console/Console.module.scss
+++ b/components/Console/Console.module.scss
@@ -1,7 +1,7 @@
 .consoleContainer {
+	flex: 1;
 	position: relative;
 	background-color: #f6f6f6;
-	width: 400px;
 	overflow: hidden;
 
 	.chatLogContainer {
@@ -18,6 +18,16 @@
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 			padding: 15px 20px;
 			margin-bottom: 10px;
+		}
+
+		.roll {
+			background-color: #bb4949;
+			color: #fff;
+			border-radius: 5px;
+			padding: 10px 20px;
+			margin-bottom: 10px;
+			text-transform: uppercase;
+			font-size: 12px;
 		}
 
 		.loader {
@@ -40,7 +50,7 @@
 
 			.promptText {
 				width: 100%;
-				padding: 10px;
+				padding: 10px 50px 10px 10px;
 				margin: 10px 0;
 				background-color: #fff;
 				border: 1px solid #ccc;
