--- a/components/Stage/Stage.module.scss
+++ b/components/Stage/Stage.module.scss
@@ -1,18 +1,25 @@
 .stageContainer {
 	display: flex;
-	flex: 1;
+	//flex: 1;
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
 	position: relative;
 	margin: 30px;
+	width: 1024px;
+
+	:hover {
+		cursor: none;
+	}
 
 	.stage {
 		position: absolute;
-		width: 100%;
+		//width: 100%;
 		overflow: hidden;
-		padding-top: 56.25%; /* 9/16 = 0.5625 */
+		//padding-top: 56.25%; /* 9/16 = 0.5625 */
 		background-color: #000;
+		width: 1024px;
+		height: 576px;
 
 		.background {
 			position: absolute;
