--- a/components/Actions/Modal/Modal.module.scss
+++ b/components/Actions/Modal/Modal.module.scss
@@ -1,14 +1,13 @@
 .modalContainer {
 	position: fixed;
-	top: 0;
-	left: 0;
+	top: 100px;
+	left: 25%;
 	z-index: 100;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	justify-content: left;
+	height: auto;
 
 	.modal {
 		background: #272727;
