--- a/components/Standby/Standby.module.scss
+++ b/components/Standby/Standby.module.scss
@@ -4,7 +4,8 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-image: url('/images/background.jpeg');
+	background-image: url('/images/banner.jpeg');
+	background-size: cover;
 	z-index: 100;
 	transition: opacity 0.5s ease-in-out;
 	opacity: 1;
