--- a/components/Standby/Standby.module.scss
+++ b/components/Standby/Standby.module.scss
@@ -4,8 +4,9 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-image: url('/images/banner.jpeg');
+	background-image: url('/images/standby.png');
 	background-size: cover;
+	background-position: center;
 	z-index: 100;
 	transition: opacity 0.5s ease-in-out;
 	opacity: 1;
