Remove old roll_dice logic

--- a/components/NextAction/NextAction.module.scss
+++ b/components/NextAction/NextAction.module.scss
@@ -8,9 +8,11 @@
 
 	span {
 		opacity: 0.5;
+		margin-right: 20px;
 	}
 
 	.clear {
-		margin-left: 20px;
+		margin: auto 0 auto 20px;
+		padding-top: 3px;
 	}
 }
