--- a/components/Stage/NextAction/NextAction.module.scss
+++ b/components/Stage/NextAction/NextAction.module.scss
@@ -1,10 +1,10 @@
 .nextActionContainer {
 	display: flex;
 	flex-direction: row;
-	margin-top: 80%;
 	color: white;
 	text-transform: uppercase;
 	cursor: pointer;
+	margin-top: 40px;
 
 	span {
 		opacity: 0.5;
