--- a/components/Character/Character.module.scss
+++ b/components/Character/Character.module.scss
@@ -12,6 +12,41 @@
 		opacity: 0;
 	}
 
+	&.mobile {
+		.characterSheet {
+			width: 60%;
+
+			h2 {
+				font-size: 30px;
+			}
+
+			.stats {
+				margin: 50px 0 20px;
+			}
+
+			.listContainer {
+				flex-direction: column;
+
+				ul {
+					margin-bottom: 20px;
+				}
+
+				h3 {
+					font-size: 20px;
+				}
+			}
+
+			p {
+				font-size: 17px;
+			}
+		}
+
+		.characterImage {
+			width: 80%;
+			right: 0;
+		}
+	}
+
 	.characterSheet {
 		background: rgba(0, 0, 0, 0.6);
 		position: absolute;
@@ -21,6 +56,7 @@
 		width: 30%;
 		color: rgb(229, 229, 229);
 		padding: 10px 30px;
+		z-index: 2;
 
 		h2 {
 			margin: 20px 0 40px;
@@ -65,5 +101,6 @@
 		right: 40px;
 		bottom: 0;
 		width: 40%;
+		z-index: 1;
 	}
 }
