--- a/components/Standby/Standby.module.scss
+++ b/components/Standby/Standby.module.scss
@@ -4,7 +4,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-image: url('/images/standby.png');
+	background-image: url('/images/background.png');
 	background-size: cover;
 	background-position: center;
 	z-index: 100;
